@@ -175,14 +175,14 @@ main (int argc, char *argv[])
 
     Glib::RefPtr<Clutter::BehaviourScale> scaler_1 =
         Clutter::BehaviourScale::create (alpha,
-                0.5,
-                1.0,
+                0.5, 0.5,
+                1.0, 1.0,
                 Clutter::GRAVITY_CENTER);
 
     Glib::RefPtr<Clutter::BehaviourScale> scaler_2 =
         Clutter::BehaviourScale::create (alpha,
-                1.0,
-                0.5,
+                1.0, 1.0,
+                0.5, 0.5,
                 Clutter::GRAVITY_CENTER);
 
     // create a new group to hold multiple actors in a group
